feat(device) detect brand Logicom model: L-ement 400 feat(device) added test device brand Maze model: Alpha feat(device) detect brand Nextbit model: Robin feat(device) detect brand Oukitel model: K3
issue #5749

--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -2321,7 +2321,7 @@
   os:
     name: Android
     short_name: AND
-    version: ""
+    version: "7.0"
     platform: ""
   client:
     type: mediaplayer
@@ -3714,7 +3714,7 @@
   os:
     name: Android
     short_name: AND
-    version: ""
+    version: "8.1.0"
     platform: ""
   client:
     type: mediaplayer
@@ -3788,7 +3788,7 @@
   os:
     name: Android
     short_name: AND
-    version: ""
+    version: "7.1.1"
     platform: ""
   client:
     type: mediaplayer
@@ -6016,7 +6016,7 @@
   os:
     name: Android
     short_name: AND
-    version: ""
+    version: "7.1.2"
     platform: ""
   client:
     type: mediaplayer
