--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -2723,3 +2723,72 @@
     model: M6
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Deezer/5.4.22.54 (Android; 4.4.2; Mobile; fr) LOGICOM L-EMENT 400
+  os:
+    name: Android
+    short_name: AND
+    version: 4.4.2
+    platform: ""
+  client:
+    type: mediaplayer
+    name: Deezer
+    version: 5.4.22.54
+  device:
+    type: smartphone
+    brand: LM
+    model: L-ement 400
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Deezer/5.4.19.9 (Android; 7.0; Mobile; fr) Maze Alpha
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: mediaplayer
+    name: Deezer
+    version: 5.4.19.9
+  device:
+    type: smartphone
+    brand: M0
+    model: Alpha
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Deezer/5.4.22.54 (Android; 7.1.1; Mobile; fr) Nextbit Robin
+  os:
+    name: Android
+    short_name: AND
+    version: 7.1.1
+    platform: ""
+  client:
+    type: mediaplayer
+    name: Deezer
+    version: 5.4.22.54
+  device:
+    type: smartphone
+    brand: N2
+    model: Robin
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Deezer/5.4.22.54 (Android; 7.0; Mobile; fr) OUKITEL K3
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: mediaplayer
+    name: Deezer
+    version: 5.4.22.54
+  device:
+    type: smartphone
+    brand: OE
+    model: K3
+  os_family: Android
+  browser_family: Unknown
+
