--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -3143,7 +3143,7 @@
   os:
     name: Android
     short_name: AND
-    version: ""
+    version: "6.0.1"
     platform: ""
   client:
     type: mediaplayer
