--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10260,12 +10260,14 @@ Opsson:
 
 # orange
 Orange:
-  regex: 'SPV[ \-]?([a-z0-9]+)|(?<!FBCR/)Orange[ _-](?!Tahiti-LS\))([^/;]+)( Build|\))(?<!Tahiti-LS\))|SC/IHD92|FunTab ([^/;]+) Build'
+  regex: 'SPV[ \-]?([a-z0-9]+)|(?<!FBCR/)Orange[ _-](?!Tahiti-LS\))([^/;]+)( Build|\))(?<!Tahiti-LS\))|SC/IHD92|Nura 2|FunTab ([^/;]+) Build'
   device: 'smartphone'
   models:
     - regex: 'SC/IHD92'
       model: 'Livebox Play'
       device: 'tv' # set top box
+    - regex: 'Nura 2'
+      model: 'Nura 2'
     - regex: 'Sego'
       model: 'Sego'
       device: 'tablet'
