--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -2811,4 +2811,20 @@
     model: Nura 2
   os_family: Android
   browser_family: Chrome
-
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 7.1.1; fr-fr; Chromebook 14 (CB3-431) Build/R66-10452.99.0) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Safari/534.30 GSA/8.7.11.21.x86 CrosArc/4808754 (edgar)
+  os:
+    name: Android
+    short_name: AND
+    version: 7.1.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Google Search App
+    version: 8.7.11.21
+  device:
+    type: desktop
+    brand: AC
+    model: Chromebook 14
+  os_family: Android
+  browser_family: Unknown
