feat(device) detect brand Vivax model: Point X2
issue #6355

--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -2828,3 +2828,23 @@
     model: Chromebook 14
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; arm_64; Android 8.1.0; Point_X2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3770.143 YaBrowser/19.7.3.91.00 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    short_name: YA
+    version: 19.7.3.91.00
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: V5
+    model: Point X2
+  os_family: Android
+  browser_family: Unknown
