--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14579,13 +14579,15 @@ Toshiba:
     - regex: 'portalmmm/[12].0 (TS[a-z0-9 ]+)'
       model: '$1'
 
-# Vivax
+# Vivax (www.vivax.com)
 Vivax:
-  regex: 'VIVAX|(?:Fly5[_ ]Lite|Fun[_ ]S500)(?:[);/ ]|$)'
+  regex: 'VIVAX|(?:Fly5[_ ]Lite|Fun[_ ]S500|Point_X2)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Fly5[_ ]Lite(?:[);/ ]|$)'
       model: 'Fly 5 Lite'
+    - regex: 'Point_X2'
+      model: 'Point X2'
     - regex: 'Fun[_ ]S500(?:[);/ ]|$)'
       model: 'Fun S500'
     - regex: 'VIVAX[ _]Fly3(?:[);/ ]|$)'
