--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -2848,3 +2848,23 @@
     model: Point X2
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; arm_64; Android 8.1.0; Polar3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.92 YaBrowser/19.10.1.100.00 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    short_name: YA
+    version: 19.10.1.100.00
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: L6
+    model: Ioutdoor Polar 3
+  os_family: Android
+  browser_family: Unknown
