--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7546,9 +7546,13 @@ Landvo:
 
 # Land Rover
 Land Rover:
-  regex: 'Land[ ]?Rover[d]?[ _-](X1[0-9]|Explore|T878|L15\+|V18|V[168]|X)(?:[);/ ]|$)'
+  regex: 'Land[ ]?Rover[d]?[ _-](?:X1[0-9]|Explore|T878|L15\+|V18|V[168]|X)(?:[);/ ]|$)|Polar3'
   device: 'smartphone'
-  model: '$1'
+  models:
+    - regex: 'Land[ ]?Rover[d]?[ _-](X1[0-9]|Explore|T878|L15\+|V18|V[168]|X)(?:[);/ ]|$)'
+      model: '$1'
+    - regex: 'Polar3'
+      model: 'Ioutdoor Polar 3'
 
 # lanix
 Lanix:
