--- a/Tests/fixtures/smartphone-18.yml
+++ b/Tests/fixtures/smartphone-18.yml
@@ -4477,3 +4477,23 @@
     model: Aquos Xx
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SCV47) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.127 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 85.0.4183.127
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY Z Flip
+  os_family: Android
+  browser_family: Chrome
