feat(device) detect brand Lenovo models: TAB2 8.0" (501LV), TAB5 10.1" (801LV) feat(device) detect brand Sharp model: Simple Smartphone 4 (704SH) feat(device) detect brand LG model: V20 Pro (L-01J) feat(device) detect brand POCO: X3 NFC (M2007J20CG)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7756,7 +7756,7 @@ Lenco:
 
 # lenovo
 Lenovo:
-  regex: '(?:LNV-)?Lenovo|IdeaTab|IdeaPad|Thinkpad|Yoga Tablet|Tab2A[0-9]-[0-9]{2}[a-z]?|ZUK[ -_]|(?:TB2-X30L|TB3-710I|YT3-X50[ML]|K50a40|TB-(?:8504F|X304F|X704V|X704A)|A2107A-H|S6000|Z2 Plus|VIBE Z2|Vibe K5(?: Plus)?|P2A42|L18011|[67]01LV|Z2131|K350t|VIBE X2|K31-t3|TAB 2 A8-50LC)(?:[);/ ]|$)'
+  regex: '(?:LNV-)?Lenovo|IdeaTab|IdeaPad|Thinkpad|Yoga Tablet|Tab2A[0-9]-[0-9]{2}[a-z]?|ZUK[ -_]|(?:TB2-X30L|TB3-710I|YT3-X50[ML]|K50a40|TB-(?:8504F|X304F|X704V|X704A)|A2107A-H|S6000|Z2 Plus|VIBE Z2|Vibe K5(?: Plus)?|P2A42|L18011|[5-8]01LV|Z2131|K350t|VIBE X2|K31-t3|TAB 2 A8-50LC)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Lenovo ?G780'
@@ -7792,6 +7792,9 @@ Lenovo:
     - regex: 'TAB 2 A8-50LC'
       model: 'TAB2 A8-50LC'
       device: 'tablet'
+    - regex: '501LV(?:[);/ ]|$)'
+      model: 'TAB2 8.0"'
+      device: 'tablet'
     - regex: '(?:TB3-850[FM]|601LV)(?:[);/ ]|$)'
       model: 'TAB3 8'
       device: 'tablet'
@@ -7800,6 +7803,9 @@ Lenovo:
       device: 'tablet'
     - regex: '(?:TB-X704[VL]|701LV)(?:[);/ ]|$)'
       model: 'TAB4 10 Plus'
+      device: 'tablet'
+    - regex: '801LV(?:[);/ ]|$)'
+      model: 'TAB5 10.1"'
       device: 'tablet'
     - regex: 'TB-X704A(?:[);/ ]|$)'
       model: 'Moto Tab'
@@ -8036,7 +8042,7 @@ Lexibook:
 
 # LG
 LG:
-  regex: 'LG|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))(?:[);/ ]|$)|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[056]|(410|415|425|500|880)PP)|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG|L-05D|L-03K|L-01[LK]|L-51A|901LG|A001LG'
+  regex: 'LG|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))(?:[);/ ]|$)|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[056]|(410|415|425|500|880)PP)|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG|L-05D|L-03K|L-01[LJK]|L-51A|901LG|A001LG'
   device: 'smartphone'
   models:
     - regex: 'LG-D325'
@@ -8207,6 +8213,8 @@ LG:
       model: 'V20'
     - regex: 'VS996'
       model: 'V30'
+    - regex: 'L-01J(?:[);/ ]|$)'
+      model: 'V20 Pro'
     - regex: 'L-01K(?:[);/ ]|$)'
       model: 'V30 Plus'
     - regex: 'L-51A(?:[);/ ]|$)'
@@ -12569,7 +12577,7 @@ Spice:
 
 # Sharp (jp.sharp)
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[589]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|SH-RM12|404SH|[45]02SH|[36]05SH|70[126]SH|80[138]SH|901SH|50[3679]SH|SHL22|SHV4[0-7]|SHV3[35689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHV4[03][-_]u)(?:[);/ ]|$)'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[589]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|SH-RM12|404SH|[45]02SH|[36]05SH|70[1246]SH|80[138]SH|901SH|50[3679]SH|SHL22|SHV4[0-7]|SHV3[35689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHV4[03][-_]u)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -12611,6 +12619,8 @@ Sharp:
       model: 'Aquos R2 Compact'
     - regex: 'SH-C02(?:[);/ ]|$)'
       model: 'Aquos V'
+    - regex: '704SH(?:[);/ ]|$)'
+      model: 'Simple Smartphone 4'
     - regex: '(?:SH-02J|SH-04G)(?:[);/ ]|$)'
       model: 'Aquos Ever'
     - regex: 'SH-02H(?:[);/ ]|$)'
@@ -14118,13 +14128,15 @@ X-View:
     - regex: 'ZEN_U5+'
       model: 'ZEN U5+'
 
-# POCO
+# POCO (sub brand Xiaomi)
 POCO:
-  regex: 'POCO[ _](?:X2|F2 PRO)(?:[);/ ]|$)'
+  regex: '(?:POCO[ _](?:X2|F2 PRO)|M2007J20CG)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'POCO X2(?:[);/ ]|$)'
       model: 'X2'
+    - regex: 'M2007J20CG(?:[);/ ]|$)'
+      model: 'X3 NFC'
     - regex: 'POCO F2 PRO(?:[);/ ]|$)'
       model: 'F2 Pro'
 
