feat(device) detect brand Sharp models: Aquos Zero 2 (SH-M13), Aquos S3 Plus (SH-M11), Aquos S3 Basic (SHV48) feat(device) detect brand LG model: Style 3 (L-41A)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8042,7 +8042,7 @@ Lexibook:
 
 # LG
 LG:
-  regex: 'LG|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))(?:[);/ ]|$)|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[056]|(410|415|425|500|880)PP)|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG|L-05D|L-03K|L-01[LJK]|L-51A|901LG|A001LG'
+  regex: 'LG|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))(?:[);/ ]|$)|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[056]|(410|415|425|500|880)PP)|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG|L-05D|L-03K|L-01[LJK]|L-[45]1A|901LG|A001LG'
   device: 'smartphone'
   models:
     - regex: 'LG-D325'
@@ -8135,6 +8135,8 @@ LG:
       model: 'Style 2'
     - regex: 'VS835(?:[);/ ]|$)'
       model: 'Stylo 2 V'
+    - regex: 'L-41A(?:[);/ ]|$)'
+      model: 'Style 3'
     - regex: 'LM-Q710|LML713DL'
       model: 'Stylo 4'
     - regex: 'LM-Q720'
@@ -12579,7 +12581,7 @@ Spice:
 
 # Sharp (jp.sharp)
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[45789]|SH-M12|S[35]-SH|SH-Z(10|01)|SH-[CL]02|SH-RM12|404SH|[45]02SH|[36]05SH|70[1246]SH|80[138]SH|901SH|50[3679]SH|SHL22|SHV4[0-7]|SHV3[35689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHV4[03][-_]u)(?:[);/ ]|$)'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[45789]|SH-M1[123]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|SH-RM12|404SH|[45]02SH|[36]05SH|70[1246]SH|80[138]SH|901SH|50[3679]SH|SHL22|SHV4[0-8]|SHV3[35689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHV4[03][-_]u)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -12607,6 +12609,8 @@ Sharp:
       model: 'Aquos S3 Dual SIM'
     - regex: '(?:SH-Z10|801SH)(?:[);/ ]|$)'
       model: 'Aquos zero'
+    - regex: 'SH-M13(?:[);/ ]|$)'
+      model: 'Aquos Zero 2'
     - regex: 'SH-Z01(?:[);/ ]|$)'
       model: 'Aquos S2 (C10)'
     - regex: '(?:SH-02E|SH-01[GH]|SH-04H)(?:[);/ ]|$)'
@@ -12649,7 +12653,7 @@ Sharp:
       model: 'Aquos S Mini'
     - regex: '(?:FS8010|SH-M08|SHV43(?:-u)?|SH-01[KL])(?:[);/ ]|$)'
       model: 'Aquos S2'
-    - regex: 'SHV46(?:[);/ ]|$)'
+    - regex: '(?:SHV46|SH-M11|901SH)(?:[);/ ]|$)'
       model: 'Aquos S3 Plus'
     - regex: '(?:SHV44|808SH|SH-04L|SH-03G)(?:[);/ ]|$)'
       model: 'Aquos R3'
@@ -12657,10 +12661,10 @@ Sharp:
       model: 'Aquos S3'
     - regex: 'FS8018(?:[);/ ]|$)'
       model: 'Aquos S3 Mini'
+    - regex: 'SHV48(?:[);/ ]|$)'
+      model: 'Aquos S3 Basic'
     - regex: 'SH-RM12(?:[);/ ]|$)'
       model: 'Aquos S3 Lite'
-    - regex: '901SH(?:[);/ ]|$)'
-      model: 'Aquos S3 Plus'
     - regex: 'SH-51A(?:[);/ ]|$)'
       model: 'Aquos R5G'
     - regex: 'SHV35(?:[);/ ]|$)'
