feat(device) detect brand Sharp model: Aquos S Mini (SHV31) feat(device) detect brand Kyocera model: Digno J (704KC)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7354,7 +7354,7 @@ K-Touch:
 
 # kyocera (kyocera.co.jp, kyocera.com)
 Kyocera:
-  regex: 'Kyocera|KWC-|QC-|(?:NP501KC|503KC|602KC|705KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV3[13-9]|KYT3[123]|KYF3[179]|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U?|KYV4[1-8]|KYV4[47][-_]u|KC-S301AE|X3-KC|S6-KC|E6560[CT]|E6782[L]?|E6790(?:TM)?)(?:[);/ ]|$)'
+  regex: 'Kyocera|KWC-|QC-|(?:NP501KC|503KC|602KC|705KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV3[13-9]|KYT3[123]|KYF3[179]|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U?|KYV4[1-8]|KYV4[47][-_]u|KC-S301AE|X3-KC|S6-KC|E6560[CT]|E6782[L]?|E6790(?:TM)?|704KC)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -7370,6 +7370,8 @@ Kyocera:
       model: 'Digno G'
     - regex: '503KC(?:[);/ ]|$)'
       model: 'Digno E'
+    - regex: '704KC(?:[);/ ]|$)'
+      model: 'Digno J'
     - regex: 'NP501KC(?:[);/ ]|$)'
       model: 'Digno'
     - regex: 'KYV36(?:[);/ ]|$)'
@@ -12583,7 +12585,7 @@ Spice:
 
 # Sharp (jp.sharp)
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[45789]|SH-M1[123]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|SH-RM12|404SH|[45]02SH|[36]05SH|70[1246]SH|80[138]SH|901SH|50[3679]SH|SHL22|SHV4[0-8]|SHV3[35689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHV4[03][-_]u)(?:[);/ ]|$)'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[45789]|SH-M1[123]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|SH-RM12|404SH|[45]02SH|[36]05SH|70[1246]SH|80[138]SH|901SH|50[3679]SH|SHL22|SHV4[0-8]|SHV3[135689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHV4[03][-_]u)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -12651,7 +12653,7 @@ Sharp:
       model: 'Aquos S'
     - regex: '702SH(?:[);/ ]|$)'
       model: 'Aquos S Basic'
-    - regex: 'SHV3[83](?:[);/ ]|$)'
+    - regex: 'SHV3[183](?:[);/ ]|$)'
       model: 'Aquos S Mini'
     - regex: '(?:FS8010|SH-M08|SHV43(?:-u)?|SH-01[KL])(?:[);/ ]|$)'
       model: 'Aquos S2'
