feat(device) Fixed models for Sharp brand, added full model names   One => Android One,   One S3 => Android One S3   One S5 => Android One S5
feat(device) detect brand Sharp models: Android One S7 (S7-SH),
 Aquos R5G (908SH), Aquos S3 Basic (907SH), Star Wars (SW001SH)

 feat(device) detect brand ZTE models: Libero 3 (A001ZT), Axon M (Z-01K)

--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -2227,7 +2227,7 @@
   device:
     type: smartphone
     brand: SH
-    model: One
+    model: Android One
   os_family: Android
   browser_family: Chrome
 - 
@@ -2247,7 +2247,7 @@
   device:
     type: smartphone
     brand: SH
-    model: One S3
+    model: Android One S3
   os_family: Android
   browser_family: Chrome
 - 
@@ -2267,7 +2267,7 @@
   device:
     type: smartphone
     brand: SH
-    model: One S5
+    model: Android One S5
   os_family: Android
   browser_family: Chrome
 - 
