--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12587,7 +12587,7 @@ Spice:
 
 # Sharp (jp.sharp)
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[45789]|SH-M1[123]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|SH-RM1[12]|404SH|[45]02SH|[36]05SH|70[1246]SH|80[138]SH|901SH|50[3679]SH|SHL22|SHV4[0-8]|SHV3[135689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHV4[03][-_]u)(?:[);/ ]|$)'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[45789]|SH-M1[123]|S[357]-SH|SH-Z(10|01)|SH-[CL]02|SH-RM1[12]|404SH|[45]02SH|[36]05SH|70[1246]SH|80[138]SH|90[178]SH|50[3679]SH|SHL22|SHV4[0-8]|SHV3[135689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHV4[03][-_]u|SW001SH)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -12600,11 +12600,13 @@ Sharp:
     - regex: '404SH(?:[);/ ]|$)'
       model: 'Aquos Xx'
     - regex: '507SH(?:[);/ ]|$)'
-      model: 'One'
+      model: 'Android One'
     - regex: 'S3-SH(?:[);/ ]|$)'
-      model: 'One S3'
+      model: 'Android One S3'
     - regex: 'S5-SH(?:[);/ ]|$)'
-      model: 'One S5'
+      model: 'Android One S5'
+    - regex: 'S7-SH(?:[);/ ]|$)'
+      model: 'Android One S7'
     - regex: 'SH-M04(?:[);/ ]|$)'
       model: 'Aquos SH-M04'
     - regex: 'SH-M05(?:[);/ ]|$)'
@@ -12635,6 +12637,8 @@ Sharp:
       model: 'Aquos R2'
     - regex: '803SH(?:[);/ ]|$)'
       model: 'Aquos R2 Compact'
+    - regex: '908SH(?:[);/ ]|$)'
+      model: 'Aquos R5G'
     - regex: 'SH-C02(?:[);/ ]|$)'
       model: 'Aquos V'
     - regex: '704SH(?:[);/ ]|$)'
@@ -12667,7 +12671,7 @@ Sharp:
       model: 'Aquos S3'
     - regex: 'FS8018(?:[);/ ]|$)'
       model: 'Aquos S3 Mini'
-    - regex: 'SHV48(?:[);/ ]|$)'
+    - regex: '(?:SHV48|907SH)(?:[);/ ]|$)'
       model: 'Aquos S3 Basic'
     - regex: 'SH-RM12(?:[);/ ]|$)'
       model: 'Aquos S3 Lite'
@@ -12685,6 +12689,8 @@ Sharp:
       model: 'R1S'
     - regex: 'SHV36(?:[);/ ]|$)'
       model: 'Basio 2'
+    - regex: 'SW001SH(?:[);/ ]|$)'
+      model: 'Star Wars'
 
     # explicit tablet models
     - regex: 'SH-08E(?:[);/ ]|$)'
@@ -15122,12 +15128,14 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|65[19]J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[35] 2019-T|A6 MAX|A0622|X9)|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT)(?:[);/ ]|$)'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|65[19]J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[35] 2019-T|A6 MAX|A0622|X9)|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A001ZT|Z-01K)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
     - regex: '602ZT(?:[);/ ]|$)'
       model: 'Libero 2'
+    - regex: 'A001ZT(?:[);/ ]|$)'
+      model: 'Libero 3'
     - regex: '901ZT(?:[);/ ]|$)'
       model: 'Libero S10'
     - regex: 'ZTE 2050(?:[);/ ]|$)'
@@ -15466,7 +15474,7 @@ ZTE:
       model: 'MAX Blue LTE'
     - regex: 'Z992'
       model: 'Avail 2'
-    - regex: 'Z999'
+    - regex: '(?:Z999|Z-01K)(?:[);/ ]|$)'
       model: 'Axon M'
     - regex: 'B2016'
       model: 'Axon Mini'
