feat(device) detect brand Sharp models: Aquos R5G SHG01), Aquos S3 (SHV45-u) feat(device) detect brand Sony model: Xperia 5 Dual (J9260) feat(test) added check invalid patten [;)\ ]

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4335,7 +4335,7 @@ Senseit:
 
 # Sony & Sony Ericsson (combined as they are mixed up)
 Sony:
-  regex: 'Sony(?: ?Ericsson)?|SGP|Xperia|(?:[4-9]0[12])SO|C1[569]0[45]|C2[01]0[45]|C230[45]|C530[236]|C550[23]|C6[56]0[236]|C6616|C68(?:0[26]|[34]3)|C69(?:0[236]|16|43)|D200[45]|D21(?:0[45]|14)|D22(?:0[236]|12|43)|D230[2356]|D240[36]|D25(?:02|33)|D510[236]|D530[36]|D5316|D5322|D5503|D58[03]3|D65(?:0[23]|43|63)|D66[03458]3|D66[14]6|D6708|E(?:20[0345]3|2006|210[45]|2115|2124|230[36]|2312|23[356]3|530[36]|53[3456]3|5506|55[356]3|56[46305][36]|58[02]3|65[35]3|66[0358]3|68[358]3)|I[34]312|I4332|F311[12356]|F331[13]|F321[12356]|F5[13]21|F5122|F813[12]|F833[12]|G312[135]|G311[26]|G322[136]|G3212|G331[123]|G3412|G3416|G342[136]|G823[12]|G834[123]|G8[14]4[12]|H(?:3113|3123|3133|3213|3223|3311|3321|4113|4133|4213|4233|4311|4331|4413|4433|82[167]6|83[12]4|8416|9436)|(?:WT|LT|SO|ST|SK|MK)[0-9]+[a-z]+[0-9]*(?: Build|\))|X?L39H|XM50[ht]|W960|portalmmm/2\.0 K|S3[69]h|SOG01|SOL2[246]|SOV3[1-9]|SOV4[0-3]|X10[ia]v?|E1[05][ai]v?|MT[0-9]{2}[a-z]? Build|SO-0(?:[12]C|[345]D|[234]E|[1-5]F|[1-5]G|[1-4]H|[1-4]J|[1-5]K|1M|[1-3]L)|R800[aix]|J82[17]0|J9110|J9210|J81[17]0|I[34]113|I3[12]23|I42[19]3|H9493|H8296|H8166|H4493|LiveWithWalkman|BRAVIA|SGP771|E3 Dual|A001SO|I4193|E6508|SOT31|SO-[45]1A|XQ-AD51|XQ-AU52'
+  regex: 'Sony(?: ?Ericsson)?|SGP|Xperia|(?:[4-9]0[12])SO|C1[569]0[45]|C2[01]0[45]|C230[45]|C530[236]|C550[23]|C6[56]0[236]|C6616|C68(?:0[26]|[34]3)|C69(?:0[236]|16|43)|D200[45]|D21(?:0[45]|14)|D22(?:0[236]|12|43)|D230[2356]|D240[36]|D25(?:02|33)|D510[236]|D530[36]|D5316|D5322|D5503|D58[03]3|D65(?:0[23]|43|63)|D66[03458]3|D66[14]6|D6708|E(?:20[0345]3|2006|210[45]|2115|2124|230[36]|2312|23[356]3|530[36]|53[3456]3|5506|55[356]3|56[46305][36]|58[02]3|65[35]3|66[0358]3|68[358]3)|I[34]312|I4332|F311[12356]|F331[13]|F321[12356]|F5[13]21|F5122|F813[12]|F833[12]|G312[135]|G311[26]|G322[136]|G3212|G331[123]|G3412|G3416|G342[136]|G823[12]|G834[123]|G8[14]4[12]|H(?:3113|3123|3133|3213|3223|3311|3321|4113|4133|4213|4233|4311|4331|4413|4433|82[167]6|83[12]4|8416|9436)|(?:WT|LT|SO|ST|SK|MK)[0-9]+[a-z]+[0-9]*(?: Build|\))|X?L39H|XM50[ht]|W960|portalmmm/2\.0 K|S3[69]h|SOG01|SOL2[246]|SOV3[1-9]|SOV4[0-3]|X10[ia]v?|E1[05][ai]v?|MT[0-9]{2}[a-z]? Build|SO-0(?:[12]C|[345]D|[234]E|[1-5]F|[1-5]G|[1-4]H|[1-4]J|[1-5]K|1M|[1-3]L)|R800[aix]|J82[17]0|J9110|J92[16]0|J81[17]0|I[34]113|I3[12]23|I42[19]3|H9493|H8296|H8166|H4493|LiveWithWalkman|BRAVIA|SGP771|E3 Dual|A001SO|I4193|E6508|SOT31|SO-[45]1A|XQ-AD51|XQ-AU52'
   device: 'smartphone'
   models:
     # SONY ERICSSON: explicit smartphone models
@@ -4485,7 +4485,7 @@ Sony:
       model: 'Xperia P'
     - regex: '(?:Sony(?:Ericsson)?)?LT25i|Xperia V'
       model: 'Xperia V'
-    - regex: '(?:Sony(?:Ericsson)?)?J9210'
+    - regex: '(?:Sony(?:Ericsson)?)?J92[16]0'
       model: 'Xperia 5 Dual'
     - regex: '(?:Sony(?:Ericsson)?)?(?:J82[17]0|SO-01M|SOV41|901SO)'
       model: 'Xperia 5'
@@ -6381,10 +6381,10 @@ Hyundai:
 
 # iBall
 iBall:
-  regex: 'iBall[ _]([^;/)]+)[ _]Build|(Snap_4G2)[;)\ ]'
+  regex: 'iBall[ _]([^;/)]+)[ _]Build|(Snap_4G2)(?:[);/ ]|$)'
   device: 'tablet'
   models:
-    - regex: '(Snap_4G2)[;)\ ]'
+    - regex: '(Snap_4G2)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'iBall[ _]([^;/)]+)[ _]Build'
       model: '$1'
@@ -6403,18 +6403,18 @@ iRola:
 
 # iRulu
 iRulu:
-  regex: 'iRULU[ _](X11|V[34])[;)\ ]'
+  regex: 'iRULU[ _](X11|V[34])(?:[);/ ]|$)'
   device: 'tablet'
   model: '$1'
 
 # Irbis
 Irbis:
-  regex: 'IRBIS|TZ(1(?:0[04]|42|50|84|65|7[01345-89]|8[356]|9[12578])|49|7(?:1[2467]|2[01567]|37|4[257]|5[23457]|6[12]|72|7[17]|8[1]|9[47])|8(?:[34]1|5[3-8]|6[45]|7[2478]|8[1-5]|9[0127])|96[0-9])|TZ(?:one|art|HIT|81L)|(SP(?:0[56]|2[01]|4[1-36]|40[12]|45[345]|49[34]|50|51[0147]|531|54[12]|55[0124]|571))[;)\ ]'
+  regex: 'IRBIS|TZ(1(?:0[04]|42|50|84|65|7[01345-89]|8[356]|9[12578])|49|7(?:1[2467]|2[01567]|37|4[257]|5[23457]|6[12]|72|7[17]|8[1]|9[47])|8(?:[34]1|5[3-8]|6[45]|7[2478]|8[1-5]|9[0127])|96[0-9])|TZ(?:one|art|HIT|81L)|(SP(?:0[56]|2[01]|4[1-36]|40[12]|45[345]|49[34]|50|51[0147]|531|54[12]|55[0124]|571))(?:[);/ ]|$)'
   device: 'tablet'
   models:
-    - regex: '(TZ(?:[0-9]+)|TZ(?:one|art|HIT|81L))[;)\ ]'
+    - regex: '(TZ(?:[0-9]+)|TZ(?:one|art|HIT|81L))(?:[);/ ]|$)'
       model: '$1'
-    - regex: '(SP[0-9]+)[;)\ ]'
+    - regex: '(SP[0-9]+)(?:[);/ ]|$)'
       device: 'smartphone'
       model: '$1'
 
@@ -10610,7 +10610,7 @@ Pioneer:
 
 # Pixus
 Pixus:
-  regex: 'Pixus|(Ride[_ ][34]G|Play[ _]Three[ _]v(?:[24].0|3.1))[;)\ ]'
+  regex: 'Pixus|(Ride[_ ][34]G|Play[ _]Three[ _]v(?:[24].0|3.1))(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'Ride[_ ]([34])G'
@@ -12587,7 +12587,7 @@ Spice:
 
 # Sharp (jp.sharp)
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[45789]|SH-M1[123]|S[357]-SH|SH-Z(10|01)|SH-[CL]02|SH-RM1[12]|404SH|[45]02SH|[36]05SH|70[1246]SH|80[138]SH|90[178]SH|50[3679]SH|SHL22|SHV4[0-8]|SHV3[135689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHV4[03][-_]u|SW001SH)(?:[);/ ]|$)'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[45789]|SH-M1[123]|S[357]-SH|SH-Z(10|01)|SH-[CL]02|SH-RM1[12]|404SH|[45]02SH|[36]05SH|70[1246]SH|80[138]SH|90[178]SH|50[3679]SH|SHL22|SHV4[0-8]|SHV3[135689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHV4[035][-_]u|SW001SH|SHG01)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -12637,7 +12637,7 @@ Sharp:
       model: 'Aquos R2'
     - regex: '803SH(?:[);/ ]|$)'
       model: 'Aquos R2 Compact'
-    - regex: '908SH(?:[);/ ]|$)'
+    - regex: '(?:908SH|SHG01)(?:[);/ ]|$)'
       model: 'Aquos R5G'
     - regex: 'SH-C02(?:[);/ ]|$)'
       model: 'Aquos V'
@@ -12667,7 +12667,7 @@ Sharp:
       model: 'Aquos S3 Plus'
     - regex: '(?:SHV44|808SH|SH-04L|SH-03G)(?:[);/ ]|$)'
       model: 'Aquos R3'
-    - regex: '(?:FS8032|SH-02M|SHV45)(?:[);/ ]|$)'
+    - regex: '(?:FS8032|SH-02M|SHV45(?:-U)?)(?:[);/ ]|$)'
       model: 'Aquos S3'
     - regex: 'FS8018(?:[);/ ]|$)'
       model: 'Aquos S3 Mini'
@@ -13356,7 +13356,7 @@ UTStarcom:
 
 # Ulefone
 Ulefone:
-  regex: 'Ulefone|Gemini Pro|Power_[356]|S10_Pro|(?:Armor(?:(?:[ _])(?:[2367]|X[236]|6S|X))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?)[);\ ]'
+  regex: 'Ulefone|Gemini Pro|Power_[356]|S10_Pro|(?:Armor(?:(?:[ _])(?:[2367]|X[236]|6[SE]|X))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'S10_Pro'
@@ -13377,31 +13377,33 @@ Ulefone:
       model: 'U007 Pro'
     - regex: 'U008 Pro'
       model: 'U008 Pro'
-    - regex: 'Armor[ _]2[);\ ]'
+    - regex: 'Armor[ _]2(?:[);/ ]|$)'
       model: 'Armor 2'
-    - regex: 'Armor[ _]3[);\ ]'
+    - regex: 'Armor[ _]3(?:[);/ ]|$)'
       model: 'Armor 3'
-    - regex: 'Armor[ _]7[);\ ]'
+    - regex: 'Armor[ _]7(?:[);/ ]|$)'
       model: 'Armor 7'
-    - regex: 'Armor[ _]X([236])[);\ ]'
+    - regex: 'Armor[ _]X([236])(?:[);/ ]|$)'
       model: 'Armor X$1'
-    - regex: 'Armor[ _]6S[);\ ]'
+    - regex: 'Armor[ _]6S(?:[);/ ]|$)'
       model: 'Armor 6S'
-    - regex: 'Armor[ _]6[);\ ]'
+    - regex: 'Armor[ _]6E(?:[);/ ]|$)'
+      model: 'Armor 6E'
+    - regex: 'Armor[ _]6(?:[);/ ]|$)'
       model: 'Armor 6'
-    - regex: 'Armor[ _]X5[);\ ]'
+    - regex: 'Armor[ _]X5(?:[);/ ]|$)'
       model: 'Armor X5'
-    - regex: 'Armor[ _]5S[);\ ]'
+    - regex: 'Armor[ _]5S(?:[);/ ]|$)'
       model: 'Armor 5S'
-    - regex: 'Armor[ _]X[);\ ]'
+    - regex: 'Armor[ _]X(?:[);/ ]|$)'
       model: 'Armor X'
-    - regex: 'Armor[);\ ]'
+    - regex: 'Armor(?:[);/ ]|$)'
       model: 'Armor'
-    - regex: 'Gemini Pro[);\ ]'
+    - regex: 'Gemini Pro(?:[);/ ]|$)'
       model: 'Gemini Pro'
     - regex: 'Power_([356])'
       model: 'Power $1'
-    - regex: 'Ulefone[_ ](X|S1[ _]Pro|S[17])[);\ ]'
+    - regex: 'Ulefone[_ ](X|S1[ _]Pro|S[17])(?:[);/ ]|$)'
       model: '$1'
     - regex: 'Ulefone[ _-]?([^;/]+) Build'
       model: '$1'
@@ -15606,7 +15608,7 @@ MTC:
 
 # MegaFon
 MegaFon:
-  regex: 'MegaFon|MFLoginPh|MegLogPh|(MFLogin[34]T?|MS3B|SP-A5|SP-A20i)[)\; ]'
+  regex: 'MegaFon|MFLoginPh|MegLogPh|(MFLogin[34]T?|MS3B|SP-A5|SP-A20i)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'MFLoginPh|MegLogPh'
@@ -15642,7 +15644,7 @@ Vertex:
   models:
     - regex: '(Lion_Dual|Baccara|Eagle[ _]4G)'
       model: '$1'
-    - regex: 'ImpressMAX[)\; ]'
+    - regex: 'ImpressMAX(?:[);/ ]|$)'
       model: 'Impress Max'
     - regex: '(Impress[ _]([^;/]+))(?:Build|\))'
       model: '$1'
@@ -15783,7 +15785,7 @@ NEXBOX:
       model: 'Smart 4G Speedy 5'
 
 Yandex:
-  regex: '(YNDX-?000SB)[;)\ ]'
+  regex: '(YNDX-?000SB)(?:[);/ ]|$)'
   device: 'smartphone'
   model: 'YNDX-000SB'
 
@@ -15792,9 +15794,9 @@ FORME:
   regex: 'FORME[ _-]'
   device: 'smartphone'
   models:
-    - regex: 'FORME[ _-]F520[;)\ ]'
+    - regex: 'FORME[ _-]F520(?:[);/ ]|$)'
       model: 'Forever'
-    - regex: 'FORME[ _-](A37|R7S)[;)\ ]'
+    - regex: 'FORME[ _-](A37|R7S)(?:[);/ ]|$)'
       model: '$1'
 
 # Shuttle
